tests/negative/comptime/if_reduce_let_false_unit.orng
// if_reduce_let_false_unit.orng:6:17: error: symbol `x` is never used
//     _ = if let x = 4 ; false { } else { }
//                ^
// 
fn main() -> Int { 
    _ = if let x = 4 ; false { } else { }
    322
} 
